cmd/xds/builders/testdata/TestFixtures/dynamic-forward-proxy-cluster.yaml
cluster_type:
  name: envoy.clusters.dynamic_forward_proxy
  typed_config:
    '@type': type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
    allow_coalesced_connections: true
    dns_cache_config:
      dns_lookup_family: V4_ONLY
      name: dynamic_forward_proxy_cache_config
dns_lookup_family: V4_ONLY
lb_policy: CLUSTER_PROVIDED
name: dynamic_forward_proxy_cluster
