cmd/xds/builders/testdata/TestFixtures/listener-single-l7-and-tcp-l4.yaml
address:
  socket_address:
    address: 0.0.0.0
    port_value: 8443
filter_chains:
- filter_chain_match:
    transport_protocol: tls
  filters:
  - name: envoy.filters.network.sni_dynamic_forward_proxy
    typed_config:
      '@type': type.googleapis.com/envoy.extensions.filters.network.sni_dynamic_forward_proxy.v3.FilterConfig
      dns_cache_config:
        dns_lookup_family: V4_ONLY
        name: dynamic_forward_proxy_cache_config
      port_value: 443
  - name: envoy.filters.network.tcp_proxy
    typed_config:
      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      access_log:
      - name: envoy.access_loggers.file
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          path: /dev/stdout
      - name: envoy.access_loggers.tcp_grpc
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.TcpGrpcAccessLogConfig
          common_config:
            grpc_service:
              envoy_grpc:
                cluster_name: envoy_access_log_service
            log_name: tcp_ingress
            transport_api_version: V3
      cluster: dynamic_forward_proxy_cluster
      stat_prefix: tcp_ingress
- filter_chain_match:
    server_names:
    - example.com
  filters:
  - name: envoy.filters.network.http_connection_manager
    typed_config:
      '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
      access_log:
      - name: envoy.access_loggers.file
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
          path: /dev/stdout
      http_filters:
      - name: envoy.filters.http.router
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          start_child_span: true
      route_config:
        name: example.com
        virtual_hosts:
        - domains:
          - example.com
          name: example.com
          routes:
          - match:
              prefix: /
            route:
              cluster: example.com
              retry_policy:
                retry_on: reset
      stat_prefix: example.com
      upgrade_configs:
      - enabled: true
        upgrade_type: websocket
  transport_socket:
    name: envoy.transport_sockets.tls
    typed_config:
      '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
      common_tls_context:
        alpn_protocols:
        - h2,http/1.1
        tls_certificate_sds_secret_configs:
        - name: example.com
          sds_config:
            ads: {}
            resource_api_version: V3
listener_filters:
- name: envoy.filters.listener.tls_inspector
  typed_config:
    '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
name: listener_0
