cmd/xds/builders/testdata/TestFixtures/manual-upstream-cluster.yaml
dns_lookup_family: V4_ONLY
load_assignment:
  cluster_name: example.com
  endpoints:
  - lb_endpoints:
    - endpoint:
        address:
          socket_address:
            address: example.com
            port_value: 443
name: example.com
transport_socket:
  name: envoy.transport_sockets.tls
  typed_config:
    '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
    common_tls_context:
      validation_context:
        trusted_ca:
          filename: /etc/ssl/certs/ca-certificates.crt
type: LOGICAL_DNS
typed_extension_protocol_options:
  envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
    '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
    auto_config:
      http_protocol_options: {}
      http2_protocol_options: {}
