cmd/xds/builders/testdata/TestFixtures/secret.yaml
name: example.com
tls_certificate:
  certificate_chain:
    inline_bytes: Y2VydA==
  private_key:
    inline_bytes: a2V5
